--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ### IntelliJ IDEA ###
 out/
+.idea/
+
 !**/src/main/**/out/
 !**/src/test/**/out/
 
@@ -27,4 +29,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-/.idea/
+
