--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### IntelliJ IDEA ###
 out/
-.idea/
+
 
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -30,3 +30,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 
+/.idea/
